heeey, its a dropdown! 9000% more dropdown than we had yesteray

--- a/templates/base_dropdown.html
+++ b/templates/base_dropdown.html
@@ -1,8 +1,14 @@
 <html>
     <head>
-        Choose a base 
+        <meta charset="UTF-8">
+        <title>Dropdown</title>
     </head>
+
     <body>
-        <h1>dropdown goes here \n {{ drops }}</h1>
+    <select name= drops method = "GET" action="/">
+        {% for base in drops %}
+        <option value = "{{base}}" SELECTED>{{base}}</option>
+        {% endfor %}
+    </select>
     </body>
 </html>
