--- a/templates/base_dropdown.html
+++ b/templates/base_dropdown.html
@@ -10,5 +10,18 @@
         <option value = "{{base}}" SELECTED>{{base}}</option>
         {% endfor %}
     </select>
+    <select name = commodities method = "GET" action = "/">
+        {% for commod in commodities %}
+        <option value = "{{commod}}" SELECTED> {{commod}}</option>
+        {% endfor %}
+
+    </select>
+
+    <input type="radio" id="source" name="buy/sell" value="source">
+    <label for="female"> Base is source</label><br>
+    <input type="radio" id="buys" name="buy/sell" value="buys">
+    <label for="male">Base Buys</label><br>
+    <input type="radio" id="other" name="buy/sell" value="other">
+    <label for="other">Other</label> 
     </body>
 </html>
